crates/walrus-semantics/snapshots/char_lit.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types
---
InferenceResult {
    type_of_expr: {
        0: App(
            TypeApp {
                ctor: Char,
                params: [],
            },
        ),
        1: App(
            TypeApp {
                ctor: Char,
                params: [],
            },
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App(
                TypeApp {
                    ctor: Char,
                    params: [],
                },
            ),
        },
    },
    diagnostics: [],
}
