crates/walrus-semantics/snapshots/lambda_return_int.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types
---
InferenceResult {
    type_of_expr: {
        0: App(
            TypeApp {
                ctor: Int,
                params: [],
            },
        ),
        1: App(
            TypeApp {
                ctor: Never,
                params: [],
            },
        ),
        2: App(
            TypeApp {
                ctor: Fn,
                params: [
                    App(
                        TypeApp {
                            ctor: Int,
                            params: [],
                        },
                    ),
                ],
            },
        ),
        3: App(
            TypeApp {
                ctor: Fn,
                params: [
                    App(
                        TypeApp {
                            ctor: Int,
                            params: [],
                        },
                    ),
                ],
            },
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App(
                TypeApp {
                    ctor: Fn,
                    params: [
                        App(
                            TypeApp {
                                ctor: Int,
                                params: [],
                            },
                        ),
                    ],
                },
            ),
        },
    },
    diagnostics: [],
}
